Fixing logo spacing

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -215,6 +215,7 @@ body.with-header {
 	height: 44px;
 	background-color: #5f6368;
 	border-radius: 50%;
+	gap: 10px;
 }
 
 body {
